<?xml version="1.0" encoding="utf-8"?>
<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/custom_proxy_dialog_margin_horizontal"
    android:paddingEnd="@dimen/custom_proxy_dialog_margin_horizontal"
    android:paddingTop="@dimen/custom_proxy_dialog_margin_top"
    android:orientation="vertical">
<com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
    android:id="@+id/customProxyInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/instagram_proxy_add_hint"
    app:errorEnabled="true"
    app:helperText="@string/instagram_proxy_add_example">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/customProxyInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:maxLines="1"
        android:imeOptions="actionDone" />

</com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/customProxyHelp"
        layout="@layout/view_help_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
